# fast_omni_tmae

./: .gitignore  MANIFEST.in  Readme.md  pyproject.toml  setup.py
data/: vectorizer_X.pickle
fast_tmae/: __init__.py  autoencoder.py  clause_bank.py  gpu_backend_opencl.py
fast_tmae/device/: tmae_train_cuda.cu  tmae_train_opencl.cl
fast_tmae/host/include/: ClauseBank.h  Tools.h  fast_rand_seed.h
fast_tmae/host/src/: ClauseBank.c  Tools.c
fast_tmae/host/src/random/: pcg32_fast.c  xorshift128.c
scripts/: collect_omni.py  install.py  run_omnitm.py
